# notion-linux-desktop

./: LICENSE  README.md
.github/workflows/: build-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
